change on existing project

--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,69 +1,36 @@
-<html>
-<head>
-<style>
-div.gallery 
-{
-    border: 1px solid #ccc;
-}
+<div>
+  <h3>What is Knowledge Sharing Portal?</h3>
+  <p>It is Angular based project. In this site you can see number of projects list by other people. 
+    You can also add your own project that you want to shared with others.
+  </p>
+</div>
 
-div.gallery:hover 
-{
-    border: 1px solid #777;
-}
+<hr>
 
-div.gallery img 
-{
-    width: 100%;
-    height: 100%;
-}
+<div>
+    <h3>Technique or Technologies used in this project ?</h3>
+    <ul>
+      <li>All the basic Angular concept</li>
+      <li>Service (dependence injection)</li>
+      <li>Routing</li>
+      <li>Inter component cummuication</li>
+      <li>Dynamic UI</li>
+      <li>Bootstrap4 and ngBootstrap</li>
+      
+    </ul>
+</div>
 
-div.desc 
-{
-    padding: 15px;
-    text-align: center;
-}
+<hr>
 
-* {
-    box-sizing: border-box;
-}
-
-.responsive 
-{
-    padding: 0 6px;
-    float: left;
-    width: 24.99999%;
-}
-
-@media only screen and (max-width: 700px) 
-{
-    .responsive {
-        width: 49.99999%;
-        margin: 6px 0;
-    }
-}
-
-@media only screen and (max-width: 500px) 
-{
-    .responsive {
-        width: 100%;
-    }
-}
-
-.clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-</style>
-</head>
-
-<body>
-
-<h1>Marvellous Infosystems - Educating For Better Tomorrow</h1>
-
-<h2>Marvellous Family</h2>
-
+<div>
+    <h3>Future Plan</h3>
+    <ul>
+      <li>FireBase Hosting</li>
+      <li>Firestore Cloud(real time data)</li>
+      <li>Firebase Authenication</li>
+    </ul>
+</div>
+<!--
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="assets/G1.jpg">
@@ -105,7 +72,7 @@ div.desc
 </body>
 <body>
 
-    <h2>Marvellous Success</h2>
+    <h3>Marvellous Success</h3>
     
     <div class="responsive">
       <div class="gallery">
@@ -147,11 +114,11 @@ div.desc
     
     </body>
 
-<!---->
+
 
 <body>
 
-    <h2>Marvellous Batches</h2>
+    <h3>Marvellous Batches</h3>
     
     <div class="responsive">
       <div class="gallery">
@@ -165,8 +132,8 @@ div.desc
     
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/Batch2.jpg">
-          <img src="assets/Batch2.jpg" alt="Northern Lights" width="600" height="400">
+        <a target="_blank" href="assets/Batch3.jpg">
+          <img src="assets/Batch3.jpg" alt="Northern Lights" width="600" height="400">
         </a>
         <div class="desc">Pre-Placement Activity</div>
       </div>
@@ -189,8 +156,4 @@ div.desc
         <div class="desc">Logic Building</div>
       </div>
     </div>
-    
-    
-    </body>
-        
-</html>
+-->
