--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,9 +2,9 @@
   <div class="container">
     <span class="text-muted">
       <p>&copy All right Reversed.
-        <a class="text-green ml-2" href="https://github.com/Rohit-B-Kadam" target="_blank">Rohit B Kadam</a>
+        <a class="text-green ml-2 mylink" href="https://github.com/Rohit-B-Kadam" target="_blank">Rohit B Kadam</a>
         , Thanks to
-        <a class="text-green ml-2" href="https://github.com/Rohit-B-Kadam" target="_blank">Piyush Khairnar</a>
+        <a class="text-green ml-2 mylink" href="https://github.com/Rohit-B-Kadam" target="_blank">Piyush Khairnar</a>
       </p>
     </span>
   </div>
