--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,6 +5,7 @@
   position: sticky;
   position: -webkit-sticky;
   z-index: 5; 
+  margin-bottom: 20px;
 }
 
 /* header design */
@@ -23,5 +24,5 @@
 
 .companyName 
 {
-  color: #0073e6;
+  color: #ccffcc;
 }
