--- a/src/app/projects/project-edit/project-edit.component.html
+++ b/src/app/projects/project-edit/project-edit.component.html
@@ -1,95 +1,90 @@
-<div class="row">
-  <div class="col-xs-12">
-    <form [formGroup]="proForm" (ngSubmit)="onSubmit()">
-      <div class="row">
-        <div class="col-xs-12">
-          <button
-            type="submit"
-            class="btn btn-success"
-            [disabled]="!proForm.valid">Save Updates</button>
-          <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel Updates</button>
+<hr>
+<div class="container" id ="addOrUpdate">
+  <h2 id="">Add New Project</h2>
+  <hr>
+  <!--Form-->
+  <form [formGroup]="proForm" (ngSubmit)="onSubmit()">
+
+    <!-- Save And Cancel Button-->
+    <div class="row">
+      <div class="col">
+        <button type="submit" class="btn btn-success" [disabled]="!proForm.valid">
+          {{ editMode? 'Update' : 'Save' }}
+        </button>&nbsp;
+        <button type="button" class="btn btn-danger" (click)="onCancel()">
+            {{ editMode? 'Cancel Update' : 'Cancel' }}
+        </button>
+      </div>
+    </div>
+    <br>
+
+    <!-- Name of Project-->
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <label for="name">Name Of Project</label>
+          <input type="text" id="name" formControlName="name" class="form-control">
         </div>
       </div>
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="form-group">
-            <label for="name">Name Of Project</label>
-            <input
-              type="text"
-              id="name"
-              formControlName="name"
-              class="form-control">
+    </div>
+
+    <!-- URL of Image -->
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <label for="imagePath">Image URL</label>
+          <input type="text" id="imagePath" formControlName="imagePath" class="form-control" #imagePath>
+        </div>
+      </div>
+    </div>
+
+    <!--Displaying Image-->
+    <div class="row">
+      <div class="col">
+        <img [src]="imagePath.value" class="img-responsive">
+      </div>
+    </div>
+
+    <!-- Description of Project-->
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <label for="description">Description of Project</label>
+          <textarea type="text" id="description" class="form-control" formControlName="description" rows="6"></textarea>
+        </div>
+      </div>
+    </div>
+
+
+    <!--Add Prerequisite For Project-->
+    <div class="row">
+      <div class="col" formArrayName="Books">
+        <!--Start Loop-->
+        <div class="row" *ngFor="let BookCtrl of proForm.get('Books').controls; let i = index" 
+            [formGroupName]="i" style="margin-top: 10px;">
+          
+          <!--Book Name-->
+          <div class="col-md-7">
+            <input type="text" class="form-control" formControlName="name" placeholder="Books Name">
+          </div>
+          <!-- Book Amount-->
+          <div class="col-md-3">
+            <input type="number" class="form-control" formControlName="amount" placeholder="Amount">
+          </div>
+          <!--Remove Button-->
+          <div class="col-md-2">
+            <button type="button" class="btn btn-danger" (click)="onDeleteBook(i)">Remove</button>
+          </div>
+        </div><!--End Loop-->
+        <hr>
+        <!-- Prerequisite Button-->
+        <div class="row">
+          <div class="col">
+            <button type="button" class="btn btn-success" (click)="onAddBook()">Add Prerequisite for Project</button>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="form-group">
-            <label for="imagePath">Image URL</label>
-            <input
-              type="text"
-              id="imagePath"
-              formControlName="imagePath"
-              class="form-control"
-              #imagePath>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12">
-          <img [src]="imagePath.value" class="img-responsive">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="form-group">
-            <label for="description">Description of Project</label>
-            <textarea
-              type="text"
-              id="description"
-              class="form-control"
-              formControlName="description"
-              rows="6"></textarea>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12" formArrayName="Books">
-          <div
-            class="row"
-            *ngFor="let BookCtrl of proForm.get('Books').controls; let i = index"
-            [formGroupName]="i"
-            style="margin-top: 10px;">
-            <div class="col-xs-8">
-              <input
-                type="text"
-                class="form-control"
-                formControlName="name">
-            </div>
-            <div class="col-xs-2">
-              <input
-                type="number"
-                class="form-control"
-                formControlName="amount">
-            </div>
-            <div class="col-xs-2">
-              <button
-                type="button"
-                class="btn btn-danger"
-                (click)="onDeleteBook(i)">Remove</button>
-            </div>
-          </div>
-          <hr>
-          <div class="row">
-            <div class="col-xs-12">
-              <button
-                type="button"
-                class="btn btn-success"
-                (click)="onAddBook()">Add Prerequisite for Project</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </form>
-  </div>
-</div>
+    </div><!-- prerequisite-->
+    
+  </form><!--Form-->
+</div><!--container-->
