--- a/src/app/projects/project-list/project-item/project-item.component.html
+++ b/src/app/projects/project-list/project-item/project-item.component.html
@@ -13,7 +13,7 @@
         <img
           [src]="pro.imagePath"
           alt="{{ pro.name }}"
-          class="img-responsive"
-          style="max-height: 50px;">
+          class="img-thumbnail"
+          style="max-height: 50px; max-width: 50px;">
   </span>
 </a>
