--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,11 +1,13 @@
-<div class="row">
-  
-  <div class="col-md-5">
-    <app-project-list></app-project-list>
-  </div>
+<div class="container">
+  <div class="row">
 
-  <div class="col-md-7">
-    <router-outlet></router-outlet>
-  </div>
+    <div class="col-md-5">
+      <app-project-list></app-project-list>
+    </div>
 
+    <div class="col-md-7">
+      <router-outlet></router-outlet>
+    </div>
+
+  </div>
 </div>
