change on existing project

--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -16,7 +16,7 @@
       <li>Inter component cummuication</li>
       <li>Dynamic UI</li>
       <li>Bootstrap4 and ngBootstrap</li>
-      
+      <li>Web site is fully responsive</li>
     </ul>
 </div>
 
@@ -30,130 +30,9 @@
       <li>Firebase Authenication</li>
     </ul>
 </div>
-<!--
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="assets/G1.jpg">
-      <img src="assets/G1.jpg" alt="Cinque Terre" width="600" height="400">
-    </a>
-    <div class="desc">Pre-Placement Activity Batch</div>
-  </div>
+
+<hr>
+<div>
+  <h4> This Project credit goes to Piyush Khairnar sir</h4>
 </div>
 
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="assets/G2.jpg">
-      <img src="assets/G2.jpg" alt="Northern Lights" width="600" height="400">
-    </a>
-    <div class="desc">Logic Building Batch</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="assets/G3.jpg">
-      <img src="assets/G3.jpg" alt="Northern Lights" width="600" height="400">
-    </a>
-    <div class="desc">UNIX Internals Batch</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="assets/G4.jpg">
-      <img src="assets/G4.jpg" alt="Northern Lights" width="600" height="400">
-    </a>
-    <div class="desc">Multi OS Programming Batch</div>
-  </div>
-</div>
-
-
-</body>
-<body>
-
-    <h3>Marvellous Success</h3>
-    
-    <div class="responsive">
-      <div class="gallery">
-        <a target="_blank" href="assets/1.jpgg">
-          <img src="assets/5.jpg" alt="Cinque Terre" width="600" height="400">
-        </a>
-        <div class="desc">.Net Framework with C#</div>
-      </div>
-    </div>
-    
-    
-    <div class="responsive">
-      <div class="gallery">
-        <a target="_blank" href="assets/2.jpg">
-          <img src="assets/6.jpg" alt="Northern Lights" width="600" height="400">
-        </a>
-        <div class="desc">Pre-Placement Activity</div>
-      </div>
-    </div>
-    
-    <div class="responsive">
-      <div class="gallery">
-        <a target="_blank" href="assets/3.jpg">
-          <img src="assets/3.jpg" alt="Northern Lights" width="600" height="400">
-        </a>
-        <div class="desc">Web Development using Angular</div>
-      </div>
-    </div>
-    
-    <div class="responsive">
-      <div class="gallery">
-        <a target="_blank" href="assets/4.jpg">
-          <img src="assets/4.jpg" alt="Northern Lights" width="600" height="400">
-        </a>
-        <div class="desc">Logic Building</div>
-      </div>
-    </div>
-    
-    
-    </body>
-
-
-
-<body>
-
-    <h3>Marvellous Batches</h3>
-    
-    <div class="responsive">
-      <div class="gallery">
-        <a target="_blank" href="assets/Batch1.jpgg">
-          <img src="assets/Batch1.jpg" alt="Cinque Terre" width="600" height="400">
-        </a>
-        <div class="desc">.Net Framework with C#</div>
-      </div>
-    </div>
-    
-    
-    <div class="responsive">
-      <div class="gallery">
-        <a target="_blank" href="assets/Batch3.jpg">
-          <img src="assets/Batch3.jpg" alt="Northern Lights" width="600" height="400">
-        </a>
-        <div class="desc">Pre-Placement Activity</div>
-      </div>
-    </div>
-    
-    <div class="responsive">
-      <div class="gallery">
-        <a target="_blank" href="assets/Batch3.jpg">
-          <img src="assets/Batch3.jpg" alt="Northern Lights" width="600" height="400">
-        </a>
-        <div class="desc">Web Development using Angular</div>
-      </div>
-    </div>
-    
-    <div class="responsive">
-      <div class="gallery">
-        <a target="_blank" href="assets/Batch4.jpg">
-          <img src="assets/Batch4.jpg" alt="Northern Lights" width="600" height="400">
-        </a>
-        <div class="desc">Logic Building</div>
-      </div>
-    </div>
--->
