--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,8 @@
-<footer class="footer">
+  <footer class="footer">
   <div class="container">
     <span class="text-muted">
-      <p>&copy All right Reversed.
-        <a class="text-green ml-2 mylink" href="https://github.com/Rohit-B-Kadam" target="_blank">Rohit B Kadam</a>
-        , Thanks to
-        <a class="text-green ml-2 mylink" href="https://github.com/Rohit-B-Kadam" target="_blank">Piyush Khairnar</a>
+      <p>© 2018 - Site Built By-
+        <a class="text-green  mylink" href="https://github.com/Rohit-B-Kadam" target="_blank">Rohit B Kadam</a>
       </p>
     </span>
   </div>
