--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,9 +6,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky">
   <div class="container-fluid">
-    <a class="navbar-brand companyName" href="#">
+    <div class="navbar-brand companyName">
       Marvellous Groups
-    </a>
+    </div>
 
     <button class="navbar-toggler" type="button" (click)="toggleNavbar()">
       <span class="navbar-toggler-icon"></span>
