--- a/src/app/projects/project-list/project-list.component.html
+++ b/src/app/projects/project-list/project-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col">
     <!-- Listener for button New Project -->
     <button class="btn btn-success" (click)="onNewProject()">New Project</button>
   </div>
@@ -8,7 +8,7 @@
 <hr>
 
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col">
     <!--Iterate all projects and display it -->
     <app-project-item
       *ngFor="let proEl of pro; let i = index"
