--- a/src/app/book-list/book-list.component.html
+++ b/src/app/book-list/book-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-10">
+  <div class="col-md-10">
     <app-book-edit></app-book-edit>
     <hr>
     <ul class="list-group">
