--- a/src/app/projects/project-detail/project-detail.component.html
+++ b/src/app/projects/project-detail/project-detail.component.html
@@ -1,48 +1,40 @@
 <!-- Panel which displys on right side when we select the project-->
-<div class="card"
->
-  <div class="row">
-    <div class="col-xs-12">
-      <img [src]="pro.imagePath" alt="{{ pro.name }}" class="img-responsive" style="max-height: 300px;">
-    </div>
+
+<div class="card" id="projectDetail">
+  <div class="card-body">
+    <h4 class="card-text">Selected Project Detail:</h4>
   </div>
-
-  <div class="row">
-    <div class="col-xs-12">
-      <h1>{{ pro.name }}</h1>
-    </div>
+  <hr>
+  <div class="card-body">
+    <h1 class="card-title">{{ pro.name }}</h1>
   </div>
+  <img [src]="pro.imagePath" alt="{{ pro.name }}" class="img-fluid" style="max-height: 300px;">
+  <div class="card-body">
 
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="btn-group" appDropdown>
+    <p class="card-text">{{ pro.description }}</p>
+  </div>
+  <div>
+    <h5 class="card-title">List of Prerequisite: </h5>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item" *ngFor="let Book of pro.Books; let i = index">
+      {{ i+1 + '] ' }} {{ Book.name }} - {{ Book.amount }}
+    </li>
+  </ul>
 
-        <button type="button" class="btn btn-primary dropdown-toggle">
-          Manage Project <span class="caret"></span>
-        </button>
-
-        <ul class="dropdown-menu">
-          <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">Add To Prerequisite List</a></li>
-          <li><a style="cursor: pointer;" (click)="onEditProject()">Edit Project</a></li>
-          <li><a style="cursor: pointer;" (click)="onDeleteProject()">Delete Project</a></li>
-        </ul>
+  <!-- Manage Button-->
+  <div class="card-body">
+    <div class="row">
+      <div class="col">
+        <div ngbDropdown class="d-inline-block profileMenu">
+          <button class="btn btn-primary profileMenu" id="dropdownBasic1" ngbDropdownToggle>Manage Project</button>
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button class="dropdown-item" (click)="onAddToShoppingList()">Add To Prerequisite List</button>
+            <button class="dropdown-item" (click)="onEditProject()">Edit Project</button>
+            <button class="dropdown-item" (click)="onDeleteProject()">Delete Project</button>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-12">
-      {{ pro.description }}
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-12">
-      <ul class="list-group">
-        <li class="list-group-item" *ngFor="let Book of pro.Books">
-          {{ Book.name }} - {{ Book.amount }}
-        </li>
-      </ul>
     </div>
   </div>
 </div>
