--- a/src/app/projects/project-start/project-start.component.html
+++ b/src/app/projects/project-start/project-start.component.html
@@ -1,1 +1,6 @@
-<h2>Please Select Any Project</h2>
+<div class="card" id="projectDetail">
+    <div class="card-body">
+        <h4 class="card-text">Please Select Any Project</h4>
+    </div>
+
+</div>
