--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
 <!--featureselected contains our menu option-->
-<app-header (featureSelected)="onNavigate($event)"></app-header>
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <router-outlet></router-outlet>
+  <app-header (featureSelected)="onNavigate($event)"></app-header>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </div>
-</div>
-<app-footer></app-footer>
+  
+  <footer>
+    <app-footer></app-footer>
+  </footer>
