--- a/src/app/projects/project-edit/project-edit.component.html
+++ b/src/app/projects/project-edit/project-edit.component.html
@@ -60,7 +60,7 @@
     <div class="row">
       <div class="col" formArrayName="Books">
         <!--Start Loop-->
-        <div class="row" *ngFor="let BookCtrl of proForm.get('Books').controls; let i = index" 
+        <div class="row" *ngFor="let BookCtrl of proForm.get('Books')['controls']; let i = index" 
             [formGroupName]="i" style="margin-top: 10px;">
           
           <!--Book Name-->
