added contain in README and About us

--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -16,7 +16,8 @@
       <li>Inter component cummuication</li>
       <li>Dynamic UI</li>
       <li>Bootstrap4 and ngBootstrap</li>
-      <li>Web site is fully responsive</li>
+      <li>Web site is fully responsive on desktop as well as on mobile</li>
+      <li>FireBase Hosting</li>
     </ul>
 </div>
 
@@ -25,7 +26,6 @@
 <div>
     <h3>Future Plan</h3>
     <ul>
-      <li>FireBase Hosting</li>
       <li>Firestore Cloud(real time data)</li>
       <li>Firebase Authenication</li>
     </ul>
