--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,7 +27,7 @@
         </li>
 
         <li class="nav-item" routerLinkActive="active" (click)="toggleNavbar()">
-          <a class="nav-link" routerLink="/aboutus">About Us</a>
+          <a class="nav-link" routerLink="/aboutus">About Project</a>
         </li>
       </ul>
 
